# srtrps-penplotter

./: Cargo.toml  README.md  bacom.toml  output.gcode
.github/instructions/: memory.instructions.md
docs/: API.md  CHANGELOG.md  CONTRIBUTING.md  CONTROLLER.md  DESIGN_DECISIONS.md  DEVELOPMENT.md  PLOTTING.md  README.md  ROADMAP.md  architecture.md
frontend/: .env  package-lock.json  vite.config.ts
frontend/src/: App.tsx
src/: gcode.rs  main.rs
src/gcode/: geometry.rs  mod.rs  output.rs  parser.rs
